Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@
 #######################
 # TRIGGER CONDITION :-
 #######################
-trigger: none
+trigger: Dev
 
 ########################################################################
 #DECLARE VARIABLES:-
