--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@
 #######################
 # TRIGGER CONDITION :-
 #######################
-trigger: Dev
+trigger: none
 
 ########################################################################
 #DECLARE VARIABLES:-
