--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@
 # TRIGGER CONDITION CAN BE ALTERED LIKE BELOW :-
 #####################################################
 trigger:
-  branches: Dev
+  branches: 'Dev'
 #     include:
 #     - feature/*
 #   paths:
