--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,12 +9,17 @@
 #     include:
 #     - Automate-PR-and-Associate-WorkItems/*
 #####################################################
+trigger:
+  branches:
+    include:
+      - main
+      - Dev
 
 
 #######################
 # TRIGGER CONDITION :-
 #######################
-trigger: none
+#trigger: none
 
 ########################################################################
 #DECLARE VARIABLES:-
