--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@
 #######################
 # TRIGGER CONDITION :-
 #######################
-trigger: none
+#trigger: none
 
 ########################################################################
 #DECLARE VARIABLES:-
