--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -149,8 +149,7 @@ stages:
   - deployment: 
     displayName: Deploy
     environment: '$(PipelineEnv)'
-    pool:
-      vmImage: '$(BuildAgent)'
+    pool: Default
     strategy:
       runOnce:
         deploy:
