--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -149,7 +149,7 @@ stages:
   - deployment: 
     displayName: Deploy
     environment: '$(PipelineEnv)'
-
+    pool: Default
     strategy:
       runOnce:
         deploy:
