--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ variables:
 ######################
 #DECLARE BUILD AGENT:-
 ######################
-pool: 'Default'
+pool: 'PR-Test-Pool'
 
 ###################
 #DECLARE STAGES:-
@@ -149,7 +149,7 @@ stages:
   - deployment: 
     displayName: Deploy
     environment: '$(PipelineEnv)'
-    pool: Default
+    pool: 'PR-Test-Pool'
     strategy:
       runOnce:
         deploy:
